<TableLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/eTdegreeC"
            android:inputType="numberDecimal"
            android:layout_column="1"

            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/C"
            android:id="@+id/textView3"
            android:layout_column="3"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/imageView1"
            android:layout_column="5"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/imageDesc"
            android:src="@drawable/ic_launcher"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/eTdegreeF"
            android:inputType="numberDecimal"
            android:layout_column="8"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/F"
            android:id="@+id/textView4"
            android:layout_column="9"
            android:layout_weight="1" />


    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/eTinch_mm"
            android:inputType="numberDecimal"
            android:layout_column="1"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/in"
            android:id="@+id/textView5"
            android:layout_column="3"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/imageView2"
            android:layout_column="5"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/imageDesc"
            android:src="@drawable/ic_launcher"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/eTmm_inch"
            android:inputType="numberDecimal"
            android:layout_column="8"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mm"
            android:id="@+id/textView6"
            android:layout_column="9"

            android:layout_weight="1" />


    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/eTinch_ft"
            android:inputType="numberDecimal"
            android:layout_column="1"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/in"
            android:id="@+id/textView20"
            android:layout_column="3"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/imageView3"
            android:layout_column="5"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/imageDesc"
            android:src="@drawable/ic_launcher"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/eTft_inch"
            android:inputType="numberDecimal"
            android:layout_column="8"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ft"
            android:id="@+id/textView21"
            android:layout_column="9"

            android:layout_weight="1" />


    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/eTfeet_m"
            android:inputType="numberDecimal"
            android:layout_column="1"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ft"
            android:id="@+id/textView7"
            android:layout_column="3"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/imageView4"
            android:layout_column="5"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/imageDesc"
            android:src="@drawable/ic_launcher"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/eTmeter_f"
            android:inputType="number"
            android:layout_column="8"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/meter"
            android:id="@+id/textView8"
            android:layout_column="9"
            android:layout_weight="1" />


    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/eTmeter_km"
            android:inputType="numberDecimal"
            android:layout_column="1"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/miles"
            android:id="@+id/textView9"
            android:layout_column="3"
            android:layout_weight="1" />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/imageView5"
            android:contentDescription="@string/imageDesc"
            android:layout_column="5"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_launcher"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/eTkm_meter"
            android:inputType="numberDecimal"

            android:layout_column="8"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/kilometers"
            android:id="@+id/textView10"
            android:layout_column="9"
            android:layout_weight="1" />


    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/eTmpH_fph"
            android:inputType="numberDecimal"
            android:layout_column="1"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/milesperHour"
            android:id="@+id/textView11"
            android:layout_column="3"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/imageView6"
            android:layout_column="5"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/imageDesc"
            android:src="@drawable/ic_launcher"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/eTfpH_mph"
            android:inputType="numberDecimal"
            android:layout_column="8"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/feetsperHour"
            android:id="@+id/textView12"
            android:layout_column="9"
            android:layout_weight="1" />


    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/eTkmph_mps"
            android:inputType="numberDecimal"
            android:layout_column="1"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/kilometerperHour"
            android:id="@+id/textView13"
            android:layout_column="3"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/imageView7"
            android:layout_column="5"
            android:contentDescription="@string/imageDesc"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_launcher"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/eTmps_kmph"
            android:inputType="numberDecimal"
            android:layout_column="8"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/milespersecond"
            android:id="@+id/textView14"
            android:layout_column="9"
            android:layout_weight="1" />
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/eTgalPerliters"
            android:inputType="numberDecimal"
            android:layout_column="1"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/gal_liters"
            android:id="@+id/textView15"
            android:layout_column="3"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/imageView8"
            android:layout_column="5"
            android:contentDescription="@string/imageDesc"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_launcher"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/eTliterspermeter"
            android:inputType="numberDecimal"
            android:layout_column="8"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/liter_meters"
            android:id="@+id/textView16"
            android:layout_column="9"
            android:layout_weight="1" />
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/eTinchpermile"
            android:inputType="numberDecimal"
            android:layout_column="1"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/in_mile"
            android:id="@+id/textView17"
            android:layout_column="3"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/imageView9"
            android:layout_column="5"
            android:contentDescription="@string/imageDesc"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_launcher"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/eTmperkm"
            android:inputType="numberDecimal"
            android:layout_column="8"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/m_km"
            android:id="@+id/textView18"
            android:layout_column="9"
            android:layout_weight="1" />
    </TableRow>


    </TableLayout>